<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">Kanji decomposition</string>
    <string name="action_settings">Settings</string>
    <string name="search_prompt">Input Search:</string>
    <string name="parts_label">Parts:</string>
    <string name="input_hint">Enter kanji</string>
    <string name="parts_hint">Parts of the kanji on the left will display here</string>
    <string name="large_moji_default_text">漢</string>
    <string name="search_button_desc">Search</string>
    <string name="part_of_label">Part of:</string>
    <string name="part_of_default_text">難、水、夫</string>
    <string name="default_input_text">分</string>
    <string name="parts_not_found">Can\'t break this Kanji, sorry!</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="copy_on_click">Copy on Kanji click</string>
    <string name="browse_on_click">Browse Kanji on click</string>

    <string-array name="options">
        <item>@string/copy_on_click</item>
        <item>@string/browse_on_click</item>
    </string-array>

    <string name="button_scroll_down_symbol">&#8681;</string>
    <string name="button_scroll_up_symbol">&#8679;</string>

    <!-- Preference activity string resources -->
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>

</resources>