<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kentvu.kanji_decomposition.MainActivity$PlaceholderFragment" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_prompt" />

    <LinearLayout
        android:id="@+id/SearchInputPart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/InputText"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/input_hint"
            android:inputType="text"
            android:maxLines="1" 
            /><!-- just to flagout the multiline attribute -->

        <ImageButton
            android:id="@+id/SearchButton"
            android:layout_width="@dimen/search_btn_width"
            android:layout_height="match_parent"
            android:contentDescription="@string/search_button_desc"
            android:src="@drawable/abc_ic_search" 
            android:onClick="SearchButton_onClick"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/DisplayPart1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/LargeMojiPart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="@dimen/large_moji_width"
                android:layout_height="wrap_content"
                android:text="" />

            <TextView
                android:id="@+id/LargeMojiDisp"
                android:layout_width="@dimen/large_moji_width"
                android:layout_height="@dimen/large_moji_height"
                android:maxLines="1"
                android:text="@string/large_moji_default_text"
                android:textSize="50sp" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/PartsPart"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/PartsLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/parts_label" />

            <TextView
                android:id="@+id/PartsDisp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/PartsLabel"
                android:hint="@string/parts_hint"
                android:lines="2"
                android:maxLines="2"
                android:scrollbars="vertical"
                android:textSize="25sp" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/DisplayPart2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/PartOfLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/part_of_label" />

        <TextView
            android:id="@+id/PartOfDisp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/PartOfLabel"
            android:scrollbars="vertical"
            android:text="@string/part_of_default_text"
            android:textSize="25sp" />
    </RelativeLayout>

</LinearLayout>